removed spacing between social buttons and fixed the hover effect to lighten the buttons as it did previously

--- a/public/style.css
+++ b/public/style.css
@@ -162,7 +162,6 @@ body {
     display: inline-block;
     position: relative;
     cursor: pointer;
-    margin: 0px 10px;
 }
 
 .fa {
@@ -175,7 +174,7 @@ body {
   }
   
 .fa:hover {
-    opacity: 0.7;
+    box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.3);
 }
 
 .fa-youtube {
